--- a/Protocol/Meds/meds.css
+++ b/Protocol/Meds/meds.css
@@ -1,13 +1,34 @@
 * {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
 }
 
 body {
   margin: 0;
 }
 
+.margin-left {
+  margin-left: 1rem;
+}
+
+.margin-right {
+  margin-right: 1rem;
+}
+
+.margin-top {
+  margin-top: 1rem;
+}
+
+.margin-bottom {
+  margin-bottom: 1rem;
+}
+
 ul {
   margin: 0;
+}
+
+ul li {
+  margin-bottom: 0.35rem;
 }
 
 table {
@@ -52,6 +73,15 @@ p {
   margin: 0;
 }
 
+span.highlight {
+  color: purple;
+  text-decoration: underline;
+}
+
+span.highlight:hover {
+  cursor: pointer;
+}
+
 .level {
   width: 10px;
   border: 1px solid black;
@@ -67,6 +97,10 @@ p {
 
 .green {
   background-color: #4caf50 !important;
+}
+
+.yellow {
+  background-color: #f4e736 !important;
 }
 
 .red {
@@ -89,6 +123,6 @@ p {
 
 @media only screen and (min-width: 750px) {
   .content td:first-child {
-    width: 5%;
+    width: 10%;
   }
 }
