--- a/Protocol/Protocols/protocol.css
+++ b/Protocol/Protocols/protocol.css
@@ -1,9 +1,31 @@
 * {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
 }
 
 body {
   margin: 0;
+}
+
+div.keyPoint {
+  margin: 1rem;
+  border: 1px solid black;
+}
+
+div.keyPoint h2 {
+  text-align: center;
+  margin: 0;
+  padding: 0.5rem;
+  color: white;
+  background-color: #283593;
+}
+
+div.keyPointContent ul li {
+  margin-bottom: 0.5rem;
+}
+
+div.keyPointContent {
+  margin: 0.5rem;
 }
 
 a {
@@ -20,6 +42,7 @@ th,
 td {
   border: 1px solid black;
   padding: 0.3rem;
+  height: 35px;
 }
 
 td:not(:first-child) {
@@ -34,7 +57,13 @@ th:not(:first-child):nth-child(odd) {
 }
 
 .sub td:first-child {
+  padding-left: 1.5rem;
+  background-color: #9e9e9e;
+}
+
+.sub-2 td:first-child {
   padding-left: 2.5rem;
+  background-color: #e0e0e0;
 }
 
 .level {
@@ -44,6 +73,14 @@ th:not(:first-child):nth-child(odd) {
 
 .green {
   background-color: #4caf50 !important;
+}
+
+.yellow {
+  background-color: #f4e736 !important;
+}
+
+.red {
+  background-color: #f44336 !important;
 }
 
 .header {
